bk_ida/gccida/c1/choose_reload_regs_init
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5718:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type *v8; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5738:12: error: expected expression
*( _OWORD *)&reload_inherited[160] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5738:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[160] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5739:12: error: expected expression
*( _OWORD *)&reload_inherited[144] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5739:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[144] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5740:12: error: expected expression
*( _OWORD *)&reload_inherited[128] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5740:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[128] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5741:12: error: expected expression
*( _OWORD *)&reload_inherited[112] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5741:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[112] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5742:12: error: expected expression
*( _OWORD *)&reload_inherited[96] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5742:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[96] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5743:12: error: expected expression
*( _OWORD *)&reload_inherited[80] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5743:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[80] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5744:12: error: expected expression
*( _OWORD *)&reload_inherited[64] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5744:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[64] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5745:12: error: expected expression
*( _OWORD *)&reload_inherited[48] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5745:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[48] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5746:12: error: expected expression
*( _OWORD *)&reload_inherited[32] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/reload1.c:5746:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&reload_inherited[32] = 0LL; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/choose_reload_regs_init/src/obj/reload1.o] Error 1
